samples/_failures_safe/1761648311_6549a0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_45723fb5.c: In function ‘main’:
./samples/SAFE/__tmp_45723fb5.c:158:31: error: missing terminating " character
  158 |             a.rows = read_int("Enter rows
      |                               ^~~~~~~~~~~
./samples/SAFE/__tmp_45723fb5.c:158:13: error: expected expression at end of input
  158 |             a.rows = read_int("Enter rows
      |             ^
./samples/SAFE/__tmp_45723fb5.c:158:22: error: too few arguments to function ‘read_int’
  158 |             a.rows = read_int("Enter rows
      |                      ^~~~~~~~
./samples/SAFE/__tmp_45723fb5.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_45723fb5.c:158:13: error: expected declaration or statement at end of input
  158 |             a.rows = read_int("Enter rows
      |             ^
./samples/SAFE/__tmp_45723fb5.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_45723fb5.c:158:13: error: expected declaration or statement at end of input
